--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -1,6 +1,8 @@
 
 <div class="sidebar">
-    <img src="https://cdn.sonicadigital.com.br/blusoft-inst/storage/custom-page/3039/1280x720-620ff3f482ae1.png" alt="">
+    <div class="img">
+      <img src="assets/logo-devs2blu.png" alt="logo devs2blu">
+    </div>
     <h1 class="cadastro">CADASTROS</h1>
     <button [routerLink]="['/equipes']">Equipes</button>
     <button [routerLink]="['/avaliadores']">Avaliadores</button>
