--- a/evaluator/src/app/components/admin/project/project.component.html
+++ b/evaluator/src/app/components/admin/project/project.component.html
@@ -22,7 +22,7 @@
         <table>
             <thead>
               <tr>
-                <th><b>ID</b></th>
+                <th class="bold">ID</th>
                 <th>EQUIPE</th>
                 <th>STACK</th>
                 <th>CRITÉRIOS</th>
