--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
                 <label for="username">USUÁRIO</label>
                 <div class="input-user">
                     <div class="icon-container">
-                        <i class="fas fa-user" style="color: #ffffff;"></i>
+                        <i class="fas fa-user"></i>
                     </div>
                     <input type="text" class="input-login" id="username">
                 </div>
@@ -17,7 +17,7 @@
                 <label for="password">SENHA</label>
                 <div class="input-password">
                     <div class="icon-container">
-                        <i class="fas fa-lock" style="color: #ffffff;"></i>
+                        <i class="fas fa-lock"></i>
                     </div>
                     <input
                     [type]="showPassword ? 'text' : 'password'"
@@ -34,7 +34,7 @@
                 </div>
               </div>
               
-            <button type="submit" class="button-login">Entrar</button>
+            <button type="submit" class="button-login">ENTRAR</button>
         </form>
     </div>
 </div>
