--- a/evaluator/src/app/components/login/login.component.scss
+++ b/evaluator/src/app/components/login/login.component.scss
@@ -1,57 +1,58 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
+@import url(src/styles.scss);
+ 
   .body {
-    background-color: #1e2447;
+    background-color: var(--dark-blue);
     width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: var(--font);
   }
 
   .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #f8f8f8;
+    background-color: var(--white);
     width: 80%;
     max-width: 400px;
     padding: 20px;
     text-align: center;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--shadow);
   }
   
   h1 {
-    color: #1e2447;
+    color: var(--dark-blue);
+    font-size: 1.75rem;
+    font-weight: 500;
   }
   
   .line {
     width: 80%;
     height: 1px;
-    background-color: #b7b7b7;
+    background-color: var(--grey);
     margin: 10px auto; 
   }
   label {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 20px;
     text-align: left;
-    margin-left: 20px;
-    color: #1e2447;
+    margin-left: 25px;
+    color: var(--dark-blue);
+    font-weight: 500;
   }
   input {
     width: 100%;
     height: 50px;
     margin-top: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--grey);
     padding: 10px;
     outline: none;
+    background-color: var(--white);
   }
   input:focus{
-    border-color: #1e2447;
+    border-color: var(--dark-blue);
   }
   
   .button-login {
@@ -59,13 +60,13 @@
     text-decoration: none;
     width: 100%;
     height: 50px;
-    background-color: #1e2447;
-    color: #f8f8f8;
+    background-color: var(--dark-blue);
+    color: var(--white);
     margin-top: 20px;
     transition: 0.3s ease;
   }
   .button-login:hover{
-    background-color: #1e2447d0;
+    background-color: var(--dark-blue-hover);
   }
   .input-password{
     position: relative;
@@ -78,7 +79,7 @@
     cursor: pointer;
   }
   .show-password {
-    color: #1e2447;
+    color: var(--dark-blue);
   }
 
   .input-user, .input-password {
@@ -87,7 +88,7 @@
   }
   
   .icon-container {
-    background-color: #1e2447;
+    background-color: var(--dark-blue);
     width: 50px;
     height: 50px;
     display: flex;
@@ -95,8 +96,8 @@
     align-items: center;
 }
   
-  .icon-container i.fa-user {
-    color: #ffffff;
+  .icon-container i.fas {
+    color: var(--white);
   }
   
   .input-login {
