update icons login

--- a/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
@@ -7,7 +7,7 @@
         <label for="type">TIPO</label>
         <div class="input-group">
           <div class="icon">
-            <i class="fas fa-user fa-lg"></i>
+            <i class="fa-regular fa-pen-to-square fa-lg"></i>
           </div>
           <input type="text" class="input-form" id="type" placeholder="Ex.: Funcionalidade" formControlName="tipo">
         </div>
@@ -16,7 +16,7 @@
         <label for="description">DESCRIÇÃO</label>
         <div class="input-group">
           <div class="icon icon-textarea">
-            <i class="fa-solid fa-envelope fa-lg"></i>
+            <i class="fa-regular fa-pen-to-square fa-lg"></i>
           </div>
           <textarea class="input-form" name="description" id="description" cols="30" rows="5" formControlName="descricao"></textarea>
         </div>
