--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
                 <label for="username">USUÁRIO</label>
                 <div class="input-user">
                     <div class="icon-container">
-                        <i class="fas fa-user"></i>
+                        <i class="fas fa-user fa-lg"></i>
                     </div>
                     <input type="text" class="input-login" id="username">
                 </div>
@@ -17,7 +17,7 @@
                 <label for="password">SENHA</label>
                 <div class="input-password">
                     <div class="icon-container">
-                        <i class="fas fa-lock"></i>
+                        <i class="fa-solid fa-key fa-lg"></i>
                     </div>
                     <input
                     [type]="showPassword ? 'text' : 'password'"
