feat(shared): implement http service feat(shared): implement update service docs: correct some general spacing tree: move a couple files to their specific folder

--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -1,7 +1,7 @@
 
 <div class="sidebar">
     <div class="img">
-      <img src="assets/logo-devs2blu.png" alt="logo devs2blu">
+      <img src="assets/img/logo-devs2blu.png" alt="logo devs2blu">
     </div>
     <h1 class="cadastro">CADASTROS</h1>
     <button [routerLink]="['/equipes']">Equipes</button>
@@ -17,4 +17,3 @@
   <div class="rotas content">
     <router-outlet></router-outlet>
   </div>
-  
