fix: rename openDialog()

--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -4,12 +4,12 @@
       <img src="assets/img/logo-devs2blu.png" alt="logo devs2blu">
     </div>
     <h1 class="cadastro">CADASTROS</h1>
-    <button [routerLink]="['/equipes']">Equipes</button>
-    <button [routerLink]="['/avaliadores']">Avaliadores</button>
-    <button [routerLink]="['/criterios']">Critérios</button>
-    <button [routerLink]="['/projetos']">Projetos</button>
+    <button [routerLink]="['/admin/equipes']">Equipes</button>
+    <button [routerLink]="['/admin/avaliadores']">Avaliadores</button>
+    <button [routerLink]="['/admin/criterios']">Critérios</button>
+    <button [routerLink]="['/admin/projetos']">Projetos</button>
     <h1 class="gerenciamento">GERENCIAMENTO</h1>
-    <button [routerLink]="['/apresentacoes']">Apresentações</button>
+    <button [routerLink]="['/admin/apresentacoes']">Apresentações</button>
 
     <button class="btn-exit">Sair</button>
 
