--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -13,7 +13,7 @@
                 <input type="text" class="input-filter" id="filter">
             </div>
 
-            <button class="btn-sortear" (click)="openDialogRandom()">SORTEAR</button>
+            <button class="btn-sortear" (click)="openDialog()">SORTEAR</button>
         </div>
 
     </div>
