--- a/evaluator/src/app/components/admin/team/team.component.html
+++ b/evaluator/src/app/components/admin/team/team.component.html
@@ -13,7 +13,7 @@
                 <input type="text" class="input-filter" id="filter">
             </div>
             
-            <button class="btn-cadastrar" (click)="openDialogTeam()">CADASTRAR</button>
+            <button class="btn-cadastrar" (click)="openDialog()">CADASTRAR</button>
         </div>
         
     </div>
