--- a/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
@@ -1,31 +1,28 @@
 <div class="dialog-form">
-    <h2>Formulário de Critério</h2>
-    <div class="line"></div>
-    <form [formGroup]="formCriterion" (ngSubmit)="onSubmit()">
-      
-      <div class="input-container">
-        <label for="type">TIPO</label>
-        <div class="input-group">
-          <div class="icon">
-            <i class="fa-regular fa-pen-to-square fa-lg"></i>
-          </div>
-          <input type="text" class="input-form" id="type" placeholder="Ex.: Funcionalidade" formControlName="tipo">
+  <h2> Formulário de Critério </h2>
+  <div class="line"></div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+    <div class="input-container">
+      <label for="type"> TIPO </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fa-regular fa-pen-to-square fa-lg"></i>
         </div>
+        <input type="text" class="input-form" id="type" placeholder="Ex.: Funcionalidade" formControlName="type">
       </div>
-      <div class="input-container ">
-        <label for="description">DESCRIÇÃO</label>
-        <div class="input-group">
-          <div class="icon icon-textarea">
-            <i class="fa-regular fa-pen-to-square fa-lg"></i>
-          </div>
-          <textarea class="input-form" name="description" id="description" cols="30" rows="5" formControlName="descricao"></textarea>
+    </div>
+    <div class="input-container ">
+      <label for="description"> DESCRIÇÃO </label>
+      <div class="input-group">
+        <div class="icon icon-textarea">
+          <i class="fa-regular fa-pen-to-square fa-lg"></i>
         </div>
+        <textarea class="input-form" name="description" id="description" cols="30" rows="5" formControlName="description"></textarea>
       </div>
-      
-      <div class="form-actions">
-        <button type="button" class="cancel" [mat-dialog-close]="false">Cancelar</button>
-        <button type="submit" class="submit">Enviar</button>
-      </div>
-    </form>
-  </div>
-  
+    </div>
+    <div class="form-actions">
+      <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
+      <button type="submit" class="submit"> Enviar </button>
+    </div>
+  </form>
+</div>
