--- a/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
@@ -1,56 +1,50 @@
 <div class="dialog-form">
-    <h2>Formulário de Avaliador</h2>
-    <div class="line"></div>
-    <form [formGroup]="formEvaluator" (ngSubmit)="onSubmit()">
-      
-      <div class="input-container">
-        <label for="name">NOME</label>
-        <div class="input-group">
-          <div class="icon">
-            <i class="fas fa-user fa-lg"></i>
-          </div>
-          <input type="text" class="input-form" id="name" placeholder="Ex.: João da Silva" formControlName="nome">
+  <h2> Formulário de Avaliador </h2>
+  <div class="line"></div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+    <div class="input-container">
+      <label for="name">NOME</label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fas fa-user fa-lg"></i>
         </div>
+        <input type="text" class="input-form" id="name" placeholder="Ex. João da Silva" formControlName="nome">
       </div>
-      <div class="input-container">
-        <label for="email">EMAIL</label>
-        <div class="input-group">
-          <div class="icon">
-            <i class="fa-solid fa-envelope fa-lg"></i>
-          </div>
-          <input type="email" class="input-form" id="email" placeholder="Ex.: joao.silva@gmail.com" formControlName="email">
+    </div>
+    <div class="input-container">
+      <label for="email"> EMAIL </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fa-solid fa-envelope fa-lg"></i>
         </div>
+        <input type="email" class="input-form" id="email" placeholder="Ex. joao.silva@gmail.com" formControlName="email">
       </div>
-      <div class="input-container">
-        <label for="user">USUÁRIO</label>
-        <div class="input-group">
-          <div class="icon">
-            <i class="fas fa-user fa-lg"></i>
-          </div>
-          <input type="text" class="input-form" id="user" placeholder="Ex.: joao.silva" formControlName="usuario">
+    </div>
+    <div class="input-container">
+      <label for="user"> USUÁRIO </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fas fa-user fa-lg"></i>
         </div>
+        <input type="text" class="input-form" id="user" placeholder="Ex. joao.silva" formControlName="usuario">
       </div>
-      <div class="input-container">
-        <label for="password">SENHA</label>
-        <div class="input-group">
-          <div class="icon">
-            <i class="fa-solid fa-key fa-lg"></i>
-          </div>
-          <input [type]="showPassword ? 'text' : 'password'" class="input-form" id="password" formControlName="senha">
-          <span
-          class="toggle-password"
-          (click)="togglePasswordVisibility()"
-          [ngClass]="{ 'show-password': showPassword }"
-        >
+    </div>
+    <div class="input-container">
+      <label for="password"> SENHA </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fa-solid fa-key fa-lg"></i>
+        </div>
+        <input [type]="showPassword ? 'text' : 'password'" class="input-form" id="password" formControlName="senha">
+        <span class="toggle-password" (click)="togglePasswordVisibility()"
+          [ngClass]="{ 'show-password': showPassword }">
           <i class="fa" [ngClass]="showPassword ? 'fa-eye' : 'fa-eye-slash'"></i>
         </span>
-        </div>
       </div>
-  
-      <div class="form-actions">
-        <button type="button" class="cancel" [mat-dialog-close]="false">Cancelar</button>
-        <button type="submit" class="submit">Enviar</button>
-      </div>
-    </form>
-  </div>
-  
+    </div>
+    <div class="form-actions">
+      <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
+      <button type="submit" class="submit"> Enviar </button>
+    </div>
+  </form>
+</div>
