--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -1,40 +1,31 @@
 <div class="body">
-    <div class="container">
-        <form>
-            <h1>LOGIN</h1>
-            <div class="line"></div>
-            <div class="form-login">
-                <label for="username">USUÁRIO</label>
-                <div class="input-user">
-                    <div class="icon-container">
-                        <i class="fas fa-user fa-lg"></i>
-                    </div>
-                    <input type="text" class="input-login" id="username">
-                </div>
-                
-            </div>
-            <div class="form-login">
-                <label for="password">SENHA</label>
-                <div class="input-password">
-                    <div class="icon-container">
-                        <i class="fa-solid fa-key fa-lg"></i>
-                    </div>
-                    <input
-                    [type]="showPassword ? 'text' : 'password'"
-                    class="input-login"
-                    id="password"
-                  />
-                  <span
-                    class="toggle-password"
-                    (click)="togglePasswordVisibility()"
-                    [ngClass]="{ 'show-password': showPassword }"
-                  >
-                    <i class="fa" [ngClass]="showPassword ? 'fa-eye' : 'fa-eye-slash'"></i>
-                  </span>
-                </div>
-              </div>
-              
-            <button type="submit" class="button-login">ENTRAR</button>
-        </form>
-    </div>
+  <div class="container">
+    <form>
+      <h1> LOGIN </h1>
+      <div class="line"></div>
+      <div class="form-login">
+        <label for="username"> USUÁRIO </label>
+        <div class="input-user">
+          <div class="icon-container">
+            <i class="fas fa-user fa-lg"></i>
+          </div>
+          <input type="text" class="input-login" id="username">
+        </div>
+      </div>
+      <div class="form-login">
+        <label for="password"> SENHA </label>
+        <div class="input-password">
+          <div class="icon-container">
+            <i class="fa-solid fa-key fa-lg"></i>
+          </div>
+          <input [type]="showPassword ? 'text' : 'password'" class="input-login" id="password" />
+          <span class="toggle-password" (click)="togglePasswordVisibility()"
+            [ngClass]="{ 'show-password': showPassword }">
+            <i class="fa" [ngClass]="showPassword ? 'fa-eye' : 'fa-eye-slash'"></i>
+          </span>
+        </div>
+      </div>
+      <button type="submit" class="button-login"> ENTRAR </button>
+    </form>
+  </div>
 </div>
