--- a/evaluator/src/app/components/admin/criterion/criterion.component.scss
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.scss
@@ -103,7 +103,9 @@ button {
   justify-content: center;
   gap: 15px;
 }
-
+.bold{
+  font-weight: 700;
+}
 
 
 @media screen and (max-width: 768px) {
